2009-10-22  Ernesto Baschny <ernst@cron-it.de>

	* Fixed bug #11586: Potential SQL injection in frontend editing (thanks to Oliver Klee)
	* Fixed bug #12303: XSS vulnerability due to not proper sanitizing in function t3lib_div::quoteJSvalue (thanks to Oliver Klee)
	* Fixed bug #12304: Frame inclusion in the backend through alt_mod_frameset (thanks to Oliver Klee)
	* Fixed bug #12305: XSS vulnerability in view_help.php / tfID parameter (thanks to Oliver Klee)
	* Fixed bug #12306: XSS vulnerability in module dispatcher
	* Fixed bug #12307: XSS vulnerability in alt_palette (thanks to Oliver Klee)
	* Fixed bug #10501: XSS vulnerability in the install tool (thanks to Oliver Klee)

2009-10-21  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Raised Extbase and Fluid version numbers to 0.9.11.

2009-10-21  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #12280: Error Message while creating empty Folders (thanks to Daniel Schmitzer)
	* Fixed bug #11643: typoLink() sometimes wrongly drops url if link contains a section (thanks to Vladimir Podkovanov)
	* Added feature #12189: Add API functions for cleaning and flushing output buffers

2009-10-21  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Updated ext_emconf.php files in system extensions
	* Follow-up to bugfix #539: Tables that cannot be localized at all produce a SQL error on deleting records
	* Cleanup: Fixed non-static function declarations in t3lib_BEfunc
	* Follow-up to bugfix #2314: Using the clipboard in the list view shows SQL errors for tables without versioning support
	* Cleanup: Updated NEWS.txt

2009-10-21  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12299: #12112: Enable resizable textareas by default (thanks to Steffen Gebert)
	* Fixed bug #12299: EM tries to read from tables of not installed extensions
	* Fixed bug #12075: Add COMPARE Link to update Wizard
	* Fixed bug #12168: Empty line in general header comment
	* Fixed bug #12175: User Setup don't check file time of ENABLE_INSTALL_TOOL